[gd_scene load_steps=4 format=3 uid="uid://billl7ek46b7u"]

[ext_resource type="Script" path="res://Scenes/UI/Tutorial/slide.gd" id="1_cfp3a"]
[ext_resource type="Texture2D" uid="uid://dq43qv6ljlg16" path="res://Assets/TutorialImages/tutorial1.png" id="2_2o2u3"]
[ext_resource type="Texture2D" uid="uid://d0afgxikvdh3k" path="res://Assets/TutorialImages/tutorial2.png" id="3_m0pp3"]

[node name="Slide" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cfp3a")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_2o2u3")

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("3_m0pp3")

[node name="TextureButton2" type="TextureButton" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureRect2/TextureButton2" to="." method="_on_texture_button_2_pressed"]
